new endpoint to get picture by word
